tests/pass/run/while_index_struct_methods/main.kira
struct Counter {
    let step: Int = 1;

    function next(value: Int) -> Int {
        return value + step;
    }
}

@Main
function main() {
    var values = [1, 2, 3, 4];
    var index = 0;
    let counter = Counter { step: 3 };

    while index < 4 {
        if index == 1 {
            index = index + 1;
            continue;
        } else if index == 3 {
            values[index] = counter.next(values[index]);
            break;
        }

        values[index] = counter.next(values[index]);
        index = index + 1;
    }

    print(values[0]);
    print(values[1]);
    print(values[2]);
    print(values[3]);
    return;
}
